# m1l0-j05_WebSite

./: .gitignore  README.md  opencode.json
milo-jos/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Caddyfile  Dockerfile  compose.yaml  deploy.sh  front_build.sh  pyproject.toml  requirements.txt  rxconfig.py
milo-jos/assets/custom_style_sheets/: normalize.css
milo-jos/assets/data/: about_me.json  projects.json
milo-jos/assets/fonts/: fonts.css
milo-jos/milo_jos/: __init__.py  milo_jos.py  version.py
milo-jos/milo_jos/components/: __init__.py  badge.py  button.py  card.py  footer.py  nav_bar.py  navbar.py  quote.py  terminal.py  timeline.py
milo-jos/milo_jos/pages/: __init__.py  about_me.py  index.py  project_detail.py  projects.py  wip.py
milo-jos/milo_jos/sections/: __init__.py  about_me.py  contact.py  hero.py  projects.py  stack.py
milo-jos/milo_jos/states/: __init__.py  carousel_state.py
milo-jos/milo_jos/styles/: __init__.py  animations.py  colors.py  fonts.py  styles.py
milo-jos/milo_jos/templates/: __init__.py  template.py
milo-jos/milo_jos/utils/: __init__.py  constants.py
milo-jos/public/: 404.html  index.html  sitemap-0.xml
milo-jos/public/404/: index.html
milo-jos/public/_next/static/0h2dq11xubC_HD_8bEEO8/: _buildManifest.js
milo-jos/public/_next/static/68nUVK7Kh54o_3v3VIomQ/: _buildManifest.js
milo-jos/public/about_me/: index.html
milo-jos/public/data/: projects.json
milo-jos/public/projects/: index.html
milo-jos/public/wip/: index.html
milo-jos/tests/: test_carousel.py  test_data.py  test_sections.py
(+84 files in other folders)
