[project]
name = "milo-jos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=12.1.1",
    "pydantic>=2.10,<2.11",
    "reflex==0.8.6",
    "sqlmodel>=0.0.22,<0.0.30",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
